[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sounds/Chat.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/TextBox.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/October Crow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/The Macabre.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="Control" type="CanvasLayer"]
pause_mode = 2
layer = 7
script = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="."]
visible = false
margin_right = 1919.0
margin_bottom = 1084.0
color = Color( 0.101961, 0.101961, 0.101961, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rectangle" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 194.245
margin_top = 843.816
margin_right = 1731.24
margin_bottom = 1048.82
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBot" type="RichTextLabel" parent="."]
pause_mode = 2
visible = false
margin_left = 212.339
margin_top = 857.335
margin_right = 1706.34
margin_bottom = 1026.33
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.05
autostart = true

[node name="Chat" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )

[node name="Click" type="Label" parent="."]
visible = false
margin_left = 805.928
margin_top = 15.7145
margin_right = 1119.93
margin_bottom = 76.7145
custom_fonts/font = SubResource( 2 )
text = "Click to close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="TextureButton" parent="."]
pause_mode = 2
visible = false
margin_right = 1926.0
margin_bottom = 1077.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Rectangle" to="." method="_on_Rectangle_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Screen" to="." method="_on_Screen_pressed"]
